<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <include layout="@layout/titlebar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="20dip"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/guangdong" />

        <TextView
            android:id="@+id/tv_guangdong_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/guangdong_1"
            android:textColor="@color/idea_back_et_hint"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_guangdong_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/guangdong_2"
            android:textColor="@color/idea_back_et_hint"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_guangdong_3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/guangdong_3"
            android:textColor="@color/idea_back_et_hint"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_guangdong_4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/guangdong_4"
            android:textColor="@color/idea_back_et_hint"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>