<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <include layout="@layout/titlebar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="15dp"
        android:fadingEdge="none"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_say_hello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dip"
                android:text="尊敬的客户，您好："
                android:textColor="@color/aboutus_color"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chinamobile_0"
                android:textColor="@color/aboutus_color"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1、注册与激活"
                    android:textColor="@color/aboutus_color1"
                    android:textSize="18sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="@drawable/more_line" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:text="@string/chinamobile_1"
                android:textColor="@color/aboutus_color"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2、联网说明"
                    android:textColor="@color/aboutus_color1"
                    android:textSize="18sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="@drawable/more_line" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:text="@string/chinamobile_2"
                android:textColor="@color/aboutus_color"
                android:textSize="18sp" />

            <!-- 3、使用说明 -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3、使用说明"
                    android:textColor="@color/aboutus_color1"
                    android:textSize="18sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="@drawable/more_line" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:text="@string/chinamobile_3"
                android:textColor="@color/aboutus_color"
                android:textSize="18sp" />

            <!-- 4、免责声明 -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4、免责声明"
                    android:textColor="@color/aboutus_color1"
                    android:textSize="18sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="@drawable/more_line" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:text="@string/chinamobile_4"
                android:textColor="@color/aboutus_color"
                android:textSize="18sp" />

            <!-- 根据产品的发展... -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:text="@string/chinamobile_5"
                android:textColor="@color/aboutus_color"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>